# parking-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  receive.py  start-service.sh  token_generator.py
flaskr/: app.py  send.py
postman/: Parking.postman_collection.json
test/: test_app.py  test_send.py  test_token_generator.py
